--- a/index.html
+++ b/index.html
@@ -1,26 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Page Title</title>
+  <meta charset="utf-8">
+  <title>Sam Neill Furr</title>
 
-	<meta name="description" content="">
-	<meta name="author" content="">
+  <meta name="description" content="The home page of Sam Neill Furr.">
+  <meta name="author" content="Sam Neill Furr">
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<!--build:css css/style.min.css-->
-	<LINK rel=StyleSheet href="css/style.css" type="text/css">
-	<!--endbuild-->
+  <!--build:css css/style.min.css-->
+  <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/style.css" type="text/css">
+  <!--endbuild-->
 </head>
 <body>
+  <div class="container">
+    <header>
+      <p>Sam</p>
+      <p>Neill</p>
+      <p>Furr</p>
+      <aside>Developer</aside>
+    </header>
 
-	<h1>wew</h1>
-	<p>This is a test paragraph. I hope it turns out okay. The quick brown fox jumps over the lazy dog.</p>
+    <div class="left">
+      <h2>Work</h2>
+      <h3>Mission BI, Inc.</h3><h4>2015-present</h4>
+      <p>Medium-size data analytics firm that specializes in data from Razer’s Edge databases. I constructed customized reports and helped develop the reporting software used by the company. I mainly used C# and SQL, as well as basic front-end tools.</p>
+      <h3>Grovelight Studio</h3><h4>2013-2014</h4>
+      <p>Small web design company based in Charleston, SC.  I worked primarily on responsive front-end web design using HTML, CSS, Javascript and JQuery, as well as logo design using Photoshop.</p>
+      <h3>Samuel Furr Architects</h3><h4>2010-2012</h4>
+      <p>Small-size firm specializing in high-end residential design on Kiawah Island.  I worked primarily as a computer drafter using ArchiCad. I also prepared computer models of homes in Blender to send to a 3D printer.</p>
+    </div>
 
-	<!--build:js js/main.min.js -->
-	<script src="js/main.js"></script>
-	<script src="js/jquery.min.js"></script>
-	<!-- endbuild -->
+    <div class="right">
+      <h2>Projects</h2>
+      <div class="project">
+        <div class="img speeks"></div>
+        <h3><a href="speeksus.html">Speeks.us</a></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="speeksus.html">[...]</a></p>
+        <h3><a href="howdoyoufeel.html">How do You feel?</a></h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="howdoyoufeel.html">[...]</a></p>
+      </div>
+    </div>
+  </div>
+  <!--build:js js/main.min.js -->
+  <script src="js/jquery.min.js"></script>
+  <script src="js/main.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
