--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <!--build:css css/style.min.css-->
   <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/normalize.css" type="text/css">
+  <link rel="stylesheet" href="css/skeleton.css" type="text/css">
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <!--endbuild-->
 </head>
