--- a/index.html
+++ b/index.html
@@ -17,35 +17,94 @@
   <!--endbuild-->
 </head>
 <body>
+  <nav>
+    <div class="container">
+      <ul>
+        <li>HOME</li>
+        <li>PORTFOLIO</li>
+        <li>CONTACT</li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     <header>
-      <p>Sam</p>
-      <p>Neill</p>
-      <p>Furr</p>
+      <h1>Sam Neill Furr</h1>
       <aside>Developer</aside>
     </header>
 
-    <div class="left">
-      <h2>Work</h2>
-      <h3>Mission BI, Inc.</h3><h4>2015-present</h4>
-      <p>Medium-size data analytics firm that specializes in data from Razer’s Edge databases. I constructed customized reports and helped develop the reporting software used by the company. I mainly used C# and SQL, as well as basic front-end tools.</p>
-      <h3>Grovelight Studio</h3><h4>2013-2014</h4>
-      <p>Small web design company based in Charleston, SC.  I worked primarily on responsive front-end web design using HTML, CSS, Javascript and JQuery, as well as logo design using Photoshop.</p>
-      <h3>Samuel Furr Architects</h3><h4>2010-2012</h4>
-      <p>Small-size firm specializing in high-end residential design on Kiawah Island.  I worked primarily as a computer drafter using ArchiCad. I also prepared computer models of homes in Blender to send to a 3D printer.</p>
-    </div>
-
-    <div class="right">
-      <h2>Projects</h2>
-      <div class="project">
-        <div class="img speeks"></div>
-        <h3><a href="speeksus.html">Speeks.us</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="speeksus.html">[...]</a></p>
-        <h3><a href="howdoyoufeel.html">How do You feel?</a></h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<a href="howdoyoufeel.html">[...]</a></p>
+    <div class="portfolio">
+      <div class="row">
+        <h2>Projects</h2>
+      </div>
+      <div class="row">
+        <div class="eight columns">
+          <h3><a href="#">How do you Feel?</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="four columns">
+          <img src="images/feel.png" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="eight columns">
+          <h3><a href="#">Speeks.us</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="four columns">
+          <img src="images/speeks.png" />
+        </div>
+      </div>
+      <div class="row">
+        <div class="eight columns">
+          <h3><a href="#">samneillfurr.com</a></h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="four columns">
+          <img src="images/samneillfurr.png" />
+        </div>
       </div>
     </div>
+
+    <div class="contact">
+      <div class="row">
+        <h2>Contact</h2>
+      </div>
+      <div class="row">
+        <img src="sam.png">
+      </div>
+      <div class="row">
+        <div class="three columns centered">
+          <a href="https://www.facebook.com/Sam.Neill" class="nofun">
+            <img src="images/facebook.png">
+            <p>Facebook</p>
+          </a>
+        </div>
+        <div class="three columns centered">
+          <a href="https://www.linkedin.com/in/samneillfurr" class="nofun">
+            <img src="images/linkedin.png">
+            <p>LinkedIn</p>
+          </a>
+        </div>
+        <div class="three columns centered">
+          <a href="https://www.twitter.com/hybls" class="nofun">
+            <img src="images/twitter.png">
+            <p>Twitter</p>
+          </a>
+        </div>
+        <div class="three columns centered">
+          <a href="MAILTO:samneillfurr@gmail.com" class="nofun">
+            <img src="images/email.png">
+            <p>Email</p>
+          </a>
+        </div>
+      </div>
+
+
   </div>
+
+  <footer>
+    <p>&copy; Sam Neill Furr 2016.</p>
+  </footer>
   <!--build:js js/main.min.js -->
   <script src="js/jquery.min.js"></script>
   <script src="js/main.js"></script>
