clone existing site

--- a/index.html
+++ b/index.html
@@ -1,77 +1,189 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Sam Neill Furr</title>
+  <title>Sam Furr</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-  <meta name="description" content="The home page of Sam Neill Furr.">
-  <meta name="author" content="Sam Neill Furr">
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="http://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!--build:css css/style.min.css-->
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/normalize.css" type="text/css">
-  <link rel="stylesheet" href="css/skeleton.css" type="text/css">
-  <link rel="stylesheet" href="css/style.css" type="text/css">
-  <!--endbuild-->
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
 </head>
 <body>
-  <nav>
+<div class="fixbg"></div>
+
+  <nav class="navbar">
     <div class="container">
-      <ul>
-        <li>HOME</li>
-        <li>PORTFOLIO</li>
-        <li>CONTACT</li>
+      <ul class="navbar-list">
+        <li class="navbar-item"><a class="navbar-link blogclick" href="/blog">Blog</a></li>
+        <li class="navbar-item"><a class="navbar-link contactclick" href="#">Contact</a></li>
+        <li class="navbar-item"><a class="navbar-link portfolioclick" href="#">Portfolio</a></li>
+	<li class="navbar-item"><a class="navbar-link homeclick underline" href="#">Home</a></li>
       </ul>
     </div>
   </nav>
+
   <div class="container">
-    <header>
-      <h1>Sam Neill Furr</h1>
-      <aside>Developer</aside>
-    </header>
+      <h1 class="bigguy">Sam Furr<p class="littleguy">Web Developer</p></h1>
+  </div>
 
-    <div class="portfolio">
+  <div class="portfoliopage">
+    <div class="container portfolio">
+
       <div class="row">
-        <h2>Projects</h2>
+        <h2 class="udark">Portfolio</h2>
       </div>
+      <div class="spacer"></div>
+
       <div class="row">
-        <div class="eight columns">
-          <h3><a href="#">How do you Feel?</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+        <div class="one-half column">
+
+          <div class="row">
+            <h3 class="udark">Web</h3>
+          </div>
+
+          <div class="spacer"></div>
+          <div class="row">
+
+              <h5 class="udark">Samneillfurr.com</h5>
+
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <p>My own website for showcasing the work I've done as well as acting as a landing page for any inquiries.
+                <ul>
+                  <li>HTML/CSS/JS</li>
+                  <li>SkeletonJS</li>
+                  <li>JQuery</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third column">
+              <a href="http://samneillfurr.net"><img src="images/samneillfurr.png" class="weird"></a>
+            </div>
+          </div>
+
+          <div class="spacer"></div>
+          <div class="row">
+
+              <h5 class="udark">Drone SC</h5>
+
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <p>A small drone and multicopter community based in South Carolina.
+                <ul>
+                  <li>HTML/CSS/JS</li>
+                  <li>SkeletonJS</li>
+                  <li>JQuery</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third column">
+              <a href="http://samneillfurr.com/projects/dronesc/"><img src="images/dronesc.png" class="weird"></a>
+            </div>
+          </div>
+
+          <div class="spacer"></div>
+          <div class="row">
+
+              <h5 class="udark">Emilyfurr.com</h5>
+
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <p>A Winthrop University art student's professional portfolio site showcasing her artwork.
+                <ul>
+                  <li>HTML/CSS</li>
+                  <li>Wordpress</li>
+                  <li>Wordpress Theme Customization</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third column">
+              <a href="http://emilyfurr.com"><img src="images/emilyfurr.png" class="weird"></a>
+            </div>
+          </div>
+
+          <div class="spacer"></div>
+          <div class="row">
+
+              <h5 class="udark">Chris Harper Construction</h5>
+
+          </div>
+          <div class="row">
+            <div class="two-thirds column">
+              <p>A construction and design-build company based out of Charleston, SC.
+                <ul>
+                  <li>HTML/CSS/JS</li>
+                  <li>JQuery</li>
+                  <li>Logo Design</li>
+                </ul>
+              </p>
+            </div>
+            <div class="one-third column">
+              <a href="http://chrisharperconstruction.com"><img src="images/chrisharper.png" class="weird"></a>
+            </div>
+          </div>
         </div>
-        <div class="four columns">
-          <img src="images/feel.png" />
+
+        <div class="one-half column">
+
+          <div class="row">
+            <h3 class="udark">Projects</h3>
+          </div>
+
+          <div class="spacer"></div>
+
+          <div class="row">
+            <h5 class="udark">Github</h5>
+          </div>
+
+          <div class="row">
+            <h5><a href="https://www.github.com/haybales">Sam Furr's GitHub</a></h5>
+
+          </div>
         </div>
+
+
       </div>
-      <div class="row">
-        <div class="eight columns">
-          <h3><a href="#">Speeks.us</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <div class="four columns">
-          <img src="images/speeks.png" />
-        </div>
-      </div>
-      <div class="row">
-        <div class="eight columns">
-          <h3><a href="#">samneillfurr.com</a></h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
-        <div class="four columns">
-          <img src="images/samneillfurr.png" />
-        </div>
-      </div>
+
     </div>
+  </div>
 
-    <div class="contact">
+  <div class="contactpage">
+    <div class="container contact">
       <div class="row">
-        <h2>Contact</h2>
+        <h2 class="udark">Contact</h2>
       </div>
+      <div class="spacer"></div>
       <div class="row">
-        <img src="sam.png">
+        <div class="four columns centered"><div class="filler"></div></div>
+        <div class="four columns centered"><img src="images/face.jpg" class="face"><p class="nofun">Sam Furr</p></div>
+
       </div>
+      <div class="spacer"></div>
       <div class="row">
         <div class="three columns centered">
           <a href="https://www.facebook.com/Sam.Neill" class="nofun">
@@ -98,16 +210,21 @@
           </a>
         </div>
       </div>
-
-
+      <div class="spacer"></div>
+    </div>
   </div>
 
+
+
   <footer>
-    <p>&copy; Sam Neill Furr 2016.</p>
+    &copy; Sam furr 2015 &nbsp; &nbsp;
   </footer>
-  <!--build:js js/main.min.js -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/main.js"></script>
-  <!-- endbuild -->
+
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+
 </body>
 </html>
