update portfolio area

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
   <nav class="navbar">
     <div class="container">
       <ul class="navbar-list">
-        <li class="navbar-item"><a class="navbar-link blogclick" href="/blog">Blog</a></li>
         <li class="navbar-item"><a class="navbar-link contactclick" href="#">Contact</a></li>
         <li class="navbar-item"><a class="navbar-link portfolioclick" href="#">Portfolio</a></li>
-	<li class="navbar-item"><a class="navbar-link homeclick underline" href="#">Home</a></li>
+	      <li class="navbar-item"><a class="navbar-link homeclick underline" href="#">Home</a></li>
       </ul>
     </div>
   </nav>
@@ -57,113 +56,73 @@
 
       <div class="row">
 
-        <div class="one-half column">
-
-          <div class="row">
-            <h3 class="udark">Web</h3>
-          </div>
-
+        <div class="twelve columns">
           <div class="spacer"></div>
-          <div class="row">
-
-              <h5 class="udark">Samneillfurr.com</h5>
-
+          <div class="row deep">
+            <h5 class="udark shallow"><a href="http://speeks.us">Speeks.us</a></h5>
+            <strong><em><a href ="https://nodejs.org/">Node.JS</a>, &nbsp;<a href="http://expressjs.com/">Express</a>, &nbsp;<a href="http://socket.io/">Socket.IO</a>, &nbsp;<a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>My own website for showcasing the work I've done as well as acting as a landing page for any inquiries.
-                <ul>
-                  <li>HTML/CSS/JS</li>
-                  <li>SkeletonJS</li>
-                  <li>JQuery</li>
-                </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://samneillfurr.net"><img src="images/samneillfurr.png" class="weird"></a>
+              <a href="http://speeks.us"><img src="images/speeks.png" class="weird"></a>
             </div>
           </div>
 
           <div class="spacer"></div>
-          <div class="row">
 
-              <h5 class="udark">Drone SC</h5>
-
+          <div class="row deep">
+            <h5 class="udark shallow"><a href="http://howdoyoufeel.herokuapp.com">How do you feel?</a></h5>
+            <strong><em><a href ="http://rubyonrails.org/">Ruby on Rails</a>, &nbsp;<a href="https://www.postgresql.org/">PostgresQL</a>, &nbsp;<a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>A small drone and multicopter community based in South Carolina.
-                <ul>
-                  <li>HTML/CSS/JS</li>
-                  <li>SkeletonJS</li>
-                  <li>JQuery</li>
-                </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://samneillfurr.com/projects/dronesc/"><img src="images/dronesc.png" class="weird"></a>
+              <a href="http://howdoyoufeel.herokuapp.com"><img src="images/feel.png" class="weird"></a>
             </div>
           </div>
 
           <div class="spacer"></div>
-          <div class="row">
 
-              <h5 class="udark">Emilyfurr.com</h5>
-
+          <div class="row deep">
+            <h5 class="udark shallow"><a href="http://chrisharperconstruction.com/">Chris Harper Construction</a></h5>
+            <strong><em><a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>A Winthrop University art student's professional portfolio site showcasing her artwork.
-                <ul>
-                  <li>HTML/CSS</li>
-                  <li>Wordpress</li>
-                  <li>Wordpress Theme Customization</li>
-                </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://emilyfurr.com"><img src="images/emilyfurr.png" class="weird"></a>
+              <a href="http://chrisharperconstruction.com/"><img src="images/chc.png" class="weird"></a>
             </div>
           </div>
 
+
           <div class="spacer"></div>
-          <div class="row">
 
-              <h5 class="udark">Chris Harper Construction</h5>
-
+          <div class="row deep">
+            <h5 class="udark shallow"><a href="http://samneillfurr.com">Samneillfurr.com</a></h5>
+            <strong><em><a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>A construction and design-build company based out of Charleston, SC.
-                <ul>
-                  <li>HTML/CSS/JS</li>
-                  <li>JQuery</li>
-                  <li>Logo Design</li>
-                </ul>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://chrisharperconstruction.com"><img src="images/chrisharper.png" class="weird"></a>
+              <a href="http://samneillfurr.com"><img src="images/samneillfurr.png" class="weird"></a>
             </div>
           </div>
-        </div>
 
-        <div class="one-half column">
 
-          <div class="row">
-            <h3 class="udark">Projects</h3>
-          </div>
 
-          <div class="spacer"></div>
-
-          <div class="row">
-            <h5 class="udark">Github</h5>
-          </div>
-
-          <div class="row">
-            <h5><a href="https://www.github.com/haybales">Sam Furr's GitHub</a></h5>
-
-          </div>
         </div>
 
 
@@ -217,7 +176,7 @@
 
 
   <footer>
-    &copy; Sam furr 2015 &nbsp; &nbsp;
+    &copy; Sam furr 2016. &nbsp; &nbsp;
   </footer>
 
   <script type="text/javascript" src="js/jquery.min.js"></script>
