make some links open in new tab

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Sam Furr</title>
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Sam Furr's personal site.">
+  <meta name="author" content="Sam Furr">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -43,7 +43,7 @@
   </nav>
 
   <div class="container">
-      <h1 class="bigguy">Sam Furr<p class="littleguy">Web Developer</p></h1>
+      <h1 class="bigguy">Sam Furr<p class="littleguy">Software Developer</p></h1>
   </div>
 
   <div class="portfoliopage">
@@ -59,8 +59,8 @@
         <div class="twelve columns">
           <div class="spacer"></div>
           <div class="row deep">
-            <h5 class="udark shallow"><a href="http://speeks.us">Speeks.us</a></h5>
-            <strong><em><a href ="https://nodejs.org/">Node.JS</a>, &nbsp;<a href="http://expressjs.com/">Express</a>, &nbsp;<a href="http://socket.io/">Socket.IO</a>, &nbsp;<a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
+            <h5 class="udark shallow"><a href="http://speeks.us" target="_blank">Speeks.us</a></h5>
+            <strong><em><a href ="https://nodejs.org/" target="_blank">Node.JS</a>, &nbsp;<a href="http://expressjs.com/" target="_blank">Express</a>, &nbsp;<a href="http://socket.io/" target="_blank">Socket.IO</a>, &nbsp;<a href="https://jquery.com/" target="_blank">Jquery</a>, &nbsp;<a href="http://sass-lang.com/" target="_blank">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
@@ -68,15 +68,15 @@
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://speeks.us"><img src="images/speeks.png" class="weird"></a>
+              <a href="http://speeks.us" target="_blank"><img src="images/speeks.png" class="weird"></a>
             </div>
           </div>
 
           <div class="spacer"></div>
 
           <div class="row deep">
-            <h5 class="udark shallow"><a href="http://howdoyoufeel.herokuapp.com">How do you feel?</a></h5>
-            <strong><em><a href ="http://rubyonrails.org/">Ruby on Rails</a>, &nbsp;<a href="https://www.postgresql.org/">PostgresQL</a>, &nbsp;<a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
+            <h5 class="udark shallow"><a href="http://howdoyoufeel.herokuapp.com" target="_blank">How do you feel?</a></h5>
+            <strong><em><a href ="http://rubyonrails.org/" target="_blank">Ruby on Rails</a>, &nbsp;<a href="https://www.postgresql.org/" target="_blank">PostgresQL</a>, &nbsp;<a href="https://jquery.com/" target="_blank">Jquery</a>, &nbsp;<a href="http://sass-lang.com/" target="_blank">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
@@ -84,15 +84,15 @@
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://howdoyoufeel.herokuapp.com"><img src="images/feel.png" class="weird"></a>
+              <a href="http://howdoyoufeel.herokuapp.com" target="_blank"><img src="images/feel.png" class="weird"></a>
             </div>
           </div>
 
           <div class="spacer"></div>
 
           <div class="row deep">
-            <h5 class="udark shallow"><a href="http://chrisharperconstruction.com/">Chris Harper Construction</a></h5>
-            <strong><em><a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
+            <h5 class="udark shallow"><a href="http://chrisharperconstruction.com/" target="_blank">Chris Harper Construction</a></h5>
+            <strong><em><a href="https://jquery.com/" target="_blank">Jquery</a>, &nbsp;<a href="http://sass-lang.com/" target="_blank">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
@@ -100,7 +100,7 @@
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://chrisharperconstruction.com/"><img src="images/chc.png" class="weird"></a>
+              <a href="http://chrisharperconstruction.com/" target="_blank"><img src="images/chc.png" class="weird"></a>
             </div>
           </div>
 
@@ -108,8 +108,8 @@
           <div class="spacer"></div>
 
           <div class="row deep">
-            <h5 class="udark shallow"><a href="http://samneillfurr.com">Samneillfurr.com</a></h5>
-            <strong><em><a href="https://jquery.com/">Jquery</a>, &nbsp;<a href="http://sass-lang.com/">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
+            <h5 class="udark shallow"><a href="http://samneillfurr.com" target="_blank">Samneillfurr.com</a></h5>
+            <strong><em><a href="https://jquery.com/" target="_blank">Jquery</a>, &nbsp;<a href="http://sass-lang.com/" target="_blank">Sass</a>, &nbsp;Javascript, &nbsp;HTML</em></strong>
           </div>
           <div class="row">
             <div class="two-thirds column">
@@ -117,7 +117,7 @@
               </p>
             </div>
             <div class="one-third column">
-              <a href="http://samneillfurr.com"><img src="images/samneillfurr.png" class="weird"></a>
+              <a href="http://samneillfurr.com" target="_blank"><img src="images/samneillfurr.png" class="weird"></a>
             </div>
           </div>
 
