--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </nav>
 
   <div class="container">
-      <h1 class="bigguy">Sam Furr<p class="littleguy">Software Developer</p></h1>
+      <h1 class="bigguy">Sam Furr<p class="littleguy">Developer</p></h1>
   </div>
 
   <div class="portfoliopage">
@@ -64,7 +64,7 @@
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <p>Working with Node.JS and Socket.IO for this project was extremely fun and satisfying. I always liked Javascript, but getting to use it for back-end work as well was great. Since Speeks.us uses sockets to chat between people, no actual chat data gets stored on the main server.
               </p>
             </div>
             <div class="one-third column">
@@ -80,7 +80,7 @@
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <p>This was a really fun project to work on. The number of iterations the design went through allowed me to experiment with art styles and my own artistic taste before landing on this design choice. Working with Ruby on Rails and PostgresQL also allowed me to flex my muscles with back-end design in order to vastly improve the function of the site.
               </p>
             </div>
             <div class="one-third column">
@@ -96,7 +96,7 @@
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <p>Working on this project at Grovelight Studio really helped me come into my own with front-end web design and allowed me to work with tools such as Jquery and its array of plugins as well as some initial work with Wordpress.
               </p>
             </div>
             <div class="one-third column">
@@ -113,7 +113,7 @@
           </div>
           <div class="row">
             <div class="two-thirds column">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+              <p>The design of my personal website has gone through many, many iterations before settling in with what you see today. I use my own website to spitball ideas for designs that I might want to use later or just to see how they might look.
               </p>
             </div>
             <div class="one-third column">
